# compository

./: Cargo.toml  README.md  index.d.ts  index.js  index.js.map  package-lock.json  package.json
app/: package-lock.json  package.json  rollup.config.js
app/demo/: index.html  web-dev-server.config.mjs
app/src/elements/: compository-app.ts  compository-compose-zomes.ts
cli/: Cargo.toml  README.md
cli/src/: dna_file.rs  main.rs  publish.rs  types.rs
cli/src/conductor_api/: app_websocket.rs  types.rs  websocket.rs
cli/src/publish/: file_upload.rs
demo/: index.html
dna/: Cargo.toml
dna/zomes/compository/: Cargo.toml
dna/zomes/compository/src/: dna.rs  dna_template.rs  lib.rs  template_dna.rs  utils.rs  zome.rs  zome_def.rs
elements/: compo-discover-entry.d.ts  compo-discover-entry.js  compo-discover-entry.js.map  compo-scope.d.ts  compo-scope.js  compo-scope.js.map
lib/: package-lock.json  package.json
lib/src/: index.ts  utils.ts
lib/src/elements/: compository-compose-zomes.ts  compository-discover-entry.ts  compository-install-dna-dialog.ts  compository-scope.ts
lib/src/processes/: dna-template.ts  download-file.ts  fetch-renderers.ts  generate-dna.ts
lib/src/services/: compository-service.ts
lib/src/types/: scoped-renderers.ts
processes/: discover.d.ts  discover.js  discover.js.map  import-module-from-file.js  import-module-from-file.js.map  install-dna.d.ts  install-dna.js  install-dna.js.map
services/: compository-service.d.ts  compository-service.js  compository-service.js.map
src/: index.ts
src/elements/: compository-compose-zomes.ts  compository-discover-entry.ts  compository-install-dna-dialog.ts
src/processes/: compress-dna.ts  discover.ts  fetch-renderers.ts  generate-dna.ts  import-module-from-file.ts
src/services/: compository-service.ts
src/types/: dnas.ts  scoped-renderers.ts
types/: components-bundle.d.ts  components-bundle.js  components-bundle.js.map  dnas.d.ts  dnas.js.map  scoped-renderers.d.ts  scoped-renderers.js  scoped-renderers.js.map
ui/: .eslintrc.js  LICENSE  package-lock.json  package.json
ui/app/: package.json
ui/app/demo/: web-dev-server.config.mjs
ui/compress-dna/: Cargo.toml  LICENSE_MIT
ui/compress-dna/src/: lib.rs
ui/compress-dna/src/types/: dna.rs  mod.rs  prelude.rs
ui/compress-dna/src/types/dna/: wasm.rs  zome.rs
ui/demo/: index.html
ui/lib/: package.json
ui/lib/demo/: web-dev-server.config.mjs
ui/lib/src/elements/: compository-compose-zomes.ts  compository-discover-entry.ts
ui/lib/src/types/: scoped-renderers.ts
ui/src/: index.ts  types.ts
ui/src/elements/: compo-discover-entry.ts  compo-scope.ts  compository-app.ts  compository-compose-zomes.ts  compository-install-dna-dialog.ts  compository-scope.ts
ui/src/processes/: compress-dna.ts  discover.ts  import-module-from-file.ts  install-dna.ts
ui/src/services/: compository-service.ts
ui/src/types/: components-bundle.ts  dnas.ts  scoped-renderers.ts
ui/test/: ui-ui.test.ts
zomepository.dna.workdir/: dna.json
zomes/zomepository/: Cargo.toml
zomes/zomepository/src/: elements_bundle.rs  lib.rs  template_dna.rs  zome.rs
